--- a/Proyecto3/src/Principal.form
+++ b/Proyecto3/src/Principal.form
@@ -25,17 +25,13 @@
                                   </Group>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <Component id="tf_Ancho_de_banda" min="-2" pref="53" max="-2" attributes="0"/>
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="bt_Gb" min="-2" pref="47" max="-2" attributes="0"/>
-                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                              <Component id="bt_MB" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Component id="cb_Material_coneccion" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="tf_Nombre_coneccion" alignment="0" max="32767" attributes="0"/>
+                                      <Group type="102" attributes="0">
+                                          <Component id="tf_Ancho_de_banda" min="-2" pref="53" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                                       </Group>
+                                      <Component id="cb_Material_coneccion" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="tf_Nombre_coneccion" alignment="0" min="-2" pref="153" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="tf_Longitud_Cable" min="-2" pref="52" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
@@ -70,9 +66,8 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="bt_MB" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="bt_Gb" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="tf_Ancho_de_banda" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -121,22 +116,6 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JRadioButton" name="bt_MB">
-          <Properties>
-            <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="buttonGroup1"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Mb/s"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JRadioButton" name="bt_Gb">
-          <Properties>
-            <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="buttonGroup1"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Gb/s"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JTextField" name="tf_Ancho_de_banda">
         </Component>
         <Component class="javax.swing.JTextField" name="tf_Nombre_coneccion">
@@ -163,6 +142,11 @@
         <Component class="javax.swing.JLabel" name="jLabel8">
           <Properties>
             <Property name="text" type="java.lang.String" value="Metros"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel9">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Mb/s"/>
           </Properties>
         </Component>
       </SubComponents>
